[FIX] RT-1728 'Sign up' too low

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -38,7 +38,7 @@
     padding-bottom: 50px;
 
     h2 {
-      margin: 30px 0 30px 0;
+      margin: 10px 0 30px 0;
       padding: 0 0 30px;
       text-align: center;
       border-bottom: 1px solid @midgray;
